--- a/.gitignore
+++ b/.gitignore
@@ -355,6 +355,8 @@ healthchecksdb
 
 # Backup folder for Package Reference Convert tool in Visual Studio 2017
 MigrationBackup/
+# Ignore Migrations directory
+**/Migrations/*
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
